Fixed a bug where adding content would not have an owner - the active plugin field must have a value before items can be added. Fixed build fail because of Base64